--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,9 @@ name: Publish Docker Image
 on:
   push:
     branches: [ "main" ]
+    tags:
+      - 'v*.*.*'          # Triggers for stable versions (e.g., v1.0.0)
+      - 'v*.*.*-beta*'    # Triggers for beta versions (e.g., v1.0.0-beta.1)
   workflow_dispatch:
 
 env:
@@ -18,10 +21,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4 # Updated to v4
 
       - name: Log in to the Container registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3 # Updated to v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -29,18 +32,29 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5 # Updated to v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,value=latest
-            type=sha
+            # Tag with "latest" only on stable semver tags or main branch
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, 'beta') }}
+            
+            # Tag with "beta" only when the git tag contains 'beta'
+            type=raw,value=beta,enable=${{ contains(github.ref, 'beta') }}
+            
+            # Tag with the actual version number (e.g., 1.0.0)
+            type=semver,pattern={{version}}
+            
+            # Always tag with the short SHA for unique identification
+            type=sha,format=short
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5 # Updated to v5
         with:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}o
-
+          labels: ${{ steps.meta.outputs.labels }}
+          # Caching speeds up subsequent builds
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
