updating the publish.yml

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [ "main" ]
     tags:
-      - 'v*.*.*'          # Triggers for stable versions (e.g., v1.0.0)
-      - 'v*.*.*-beta*'    # Triggers for beta versions (e.g., v1.0.0-beta.1)
+      - 'v*.*.*'
+      - 'v*.*.*-beta*'
   workflow_dispatch:
 
 env:
@@ -21,10 +21,15 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4 # Updated to v4
+        uses: actions/checkout@v4
+
+      # --- ADD THIS STEP HERE ---
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      # --------------------------
 
       - name: Log in to the Container registry
-        uses: docker/login-action@v3 # Updated to v3
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -32,29 +37,21 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v5 # Updated to v5
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            # Tag with "latest" only on stable semver tags or main branch
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, 'beta') }}
-            
-            # Tag with "beta" only when the git tag contains 'beta'
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || (startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, 'beta')) }}
             type=raw,value=beta,enable=${{ contains(github.ref, 'beta') }}
-            
-            # Tag with the actual version number (e.g., 1.0.0)
             type=semver,pattern={{version}}
-            
-            # Always tag with the short SHA for unique identification
             type=sha,format=short
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5 # Updated to v5
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          # Caching speeds up subsequent builds
           cache-from: type=gha
           cache-to: type=gha,mode=max
