--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,10 +23,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # --- ADD THIS STEP HERE ---
+      # --- THIS WAS MISSING ---
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      # --------------------------
+      # ------------------------
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
