--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,10 +23,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # --- THIS WAS MISSING ---
+      # --- THIS IS THE FIX ---
+      # This step creates the builder instance required for caching
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      # ------------------------
+      # -----------------------
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -41,9 +42,16 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            # Tag 'latest' only on main branch or stable tags (no beta)
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || (startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, 'beta')) }}
+            
+            # Tag 'beta' if the tag contains 'beta'
             type=raw,value=beta,enable=${{ contains(github.ref, 'beta') }}
+            
+            # Standard semantic versioning (e.g. 1.0.0)
             type=semver,pattern={{version}}
+            
+            # Short commit SHA for tracking
             type=sha,format=short
 
       - name: Build and push Docker image
