--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,9 +3,7 @@ name: Publish Docker Image
 on:
   push:
     branches: [ "main" ]
-    tags:
-      - 'v*.*.*'
-      - 'v*.*.*-beta*'
+    tags: [ 'v*.*.*' ] 
   workflow_dispatch:
 
 env:
@@ -23,11 +21,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # --- THIS IS THE FIX ---
-      # This step creates the builder instance required for caching
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      # -----------------------
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -42,16 +37,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            # Tag 'latest' only on main branch or stable tags (no beta)
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || (startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, 'beta')) }}
+            type=raw,value=latest,enable=true
             
-            # Tag 'beta' if the tag contains 'beta'
-            type=raw,value=beta,enable=${{ contains(github.ref, 'beta') }}
-            
-            # Standard semantic versioning (e.g. 1.0.0)
             type=semver,pattern={{version}}
-            
-            # Short commit SHA for tracking
+
             type=sha,format=short
 
       - name: Build and push Docker image
