--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,12 +3,13 @@ name: Publish Docker Image
 on:
   push:
     branches: [ "main" ]
-    tags: [ 'v*.*.*' ] 
+    tags: [ 'v*.*.*' ]
   workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  APP_PORT: 5000
 
 jobs:
   build-and-push-image:
@@ -38,11 +39,46 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest,enable=true
-            
             type=semver,pattern={{version}}
-
             type=sha,format=short
 
+      # 1. Build and LOAD (Tag as :test for internal testing)
+      - name: Build and load for testing
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          load: true
+          push: false
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # 2. Run Smoke Tests (UPDATED with SKIP_DB_INIT)
+      - name: Test Docker Image (Smoke Test)
+        run: |
+          echo "Starting container for smoke testing..."
+          # Added -e SKIP_DB_INIT=true to bypass database connection check
+          docker run -d --name test-container -e SKIP_DB_INIT=true -p ${{ env.APP_PORT }}:${{ env.APP_PORT }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test
+          
+          # Sleep to let the app initialize
+          sleep 10
+          
+          # Check if container is still running
+          if [ ! "$(docker ps -q -f name=test-container)" ]; then
+            echo "Container crashed immediately!"
+            docker logs test-container
+            exit 1
+          fi
+
+          # Test endpoint with curl
+          echo "Testing application response..."
+          curl --fail --retry 3 --retry-delay 5 http://localhost:${{ env.APP_PORT }} || (docker logs test-container && exit 1)
+          
+          # Cleanup
+          docker stop test-container && docker rm test-container
+          echo "Smoke test passed!"
+
+      # 3. Push to Registry (Only if tests pass)
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
